mengubah fail amali.html

--- a/amali.html
+++ b/amali.html
@@ -9,6 +9,10 @@
         .git{
             font-weight: bold;
         }
+
+        .makmal{
+            font-style: italic;
+        }
     </style>
 </head>
 
@@ -16,6 +20,7 @@
 
     <h1>Ujian Amali Source Code Management</h1>
     <p class="git">- Github dan Git</p>
+    <p class="makmal">- Makmal Komputer 2</p>
 
 </body>
 </html>
