menambah ayat fail amali.html

--- a/amali.html
+++ b/amali.html
@@ -21,6 +21,7 @@
     <h1>Ujian Amali Source Code Management</h1>
     <p class="git">- Github dan Git</p>
     <p class="makmal">- Makmal Komputer 2</p>
+    <p class="bengkel">- Bengkel Teknologi Perisian</p>
 
 </body>
 </html>
